--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 # Database
 DATABASE_URL="postgresql://user:password@localhost:5432/rola_cards?schema=public"
+#DATABASE_URL="postgresql://postgres.ylagxiipzrxtfcjrbxew:fudpUv-woftoq-4xefri@aws-0-us-west-2.pooler.supabase.com:6543/postgres"
+#DATABASE_URL="postgresql://postgres:fudpUv-woftoq-4xefri@db.ylagxiipzrxtfcjrbxew.supabase.co:5432/postgres?pgbouncer=true"
+
+
 
 # NextAuth
 NEXTAUTH_URL="http://localhost:3000"
